Fix:Board alignment fix

--- a/web/src/App.css
+++ b/web/src/App.css
@@ -1,60 +1,68 @@
+.main-container {
+  display: flex;
+}
+::-webkit-scrollbar {
+  width: 0; /* Remove scrollbar space */
+  background: transparent; /* Optional: just make scrollbar invisible */
+}
+/* Optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+  background: #ff0000;
+}
 .board {
-  height: min(100vh, 100vw);
-  top: 50%;
-  left: 50%;
-  width: min(100vw, 100vh);
-  background-size: cover;
-  position: absolute;
-  margin: -50vh 0 0 -50vh;
-}
-
-.text{
-  color: #464655;
-}
-
-.cell{
-  padding:0px;
-  width: 14vh;
-  height: 14vh;
+  width: 100vh;
+  flex: 2;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .tableDiv {
-  margin-top:-00vh;
-  margin-left:-00vh;
 }
 
-.boardTable {
-  height: 84vh;
-  width: 84vh;
-  margin: 8vh 8vh 8vh 8vh;
-}
-
-.item{
-  margin-left:auto;
-  margin-right:auto;
-}
-
-
-.button-panel{
-}
-
-.detail-box{
+.text {
   color: #464655;
 }
 
-.right-box{
-  border-radius: 2vh;
-  background-color: #0000000A;
-  width: 18vw;
-  margin-top:10vh;
-  margin-left:5vh;
-  padding: 2vh;
+.cell {
+  width: 13.5vh;
+  height: 13.5vh;
 }
 
-.backward{
+.boardTable {
+  height: 77.6vh;
+  width: 77.6vh;
+  margin: 8vh auto;
+}
+
+.item {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.button-panel {
+}
+
+.detail-box {
+  color: #464655;
+}
+
+.left-box {
+  margin-top: 10vh;
+  height: 90%;
+  flex: 1;
+}
+.left-box-content {
+  padding: 20px;
+  width: 75%;
+  margin: 0px auto;
+  border-radius: 2vh;
+  background-color: #0000000a;
+}
+.backward {
   background-color: white;
   padding: 10px 10px;
-  border-radius:10px;
+  border-radius: 10px;
   display: inline-block;
   font-size: 16px;
   height: 15px;
@@ -63,16 +71,16 @@
   margin-right: 20px;
 }
 
-.move-number{
+.move-number {
   display: inline-block;
   margin-right: 20px;
   font-weight: 700;
 }
 
-.forward{
+.forward {
   background-color: white;
   padding: 10px 10px;
-  border-radius:10px;
+  border-radius: 10px;
   display: inline-block;
   font-size: 16px;
   height: 15px;
@@ -81,7 +89,7 @@
 
 .button {
   align-items: center;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   border: 0;
   border-radius: 100px;
   box-sizing: border-box;
@@ -98,39 +106,41 @@
   padding-left: 20px;
   padding-right: 20px;
   text-align: center;
-  transition: background-color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s, box-shadow 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s, color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s;
+  transition: background-color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s,
+    box-shadow 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s,
+    color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s;
   user-select: none;
   -webkit-user-select: none;
   vertical-align: middle;
 }
 
 .button:hover,
-.button:focus { 
+.button:focus {
   background-color: #ffa54b;
   color: #ffffff;
 }
 
 .button:active {
   background: #ff8c46;
-  color: rgb(255, 255, 255, .7);
+  color: rgb(255, 255, 255, 0.7);
 }
 
-.button:disabled { 
+.button:disabled {
   cursor: not-allowed;
-  background: rgba(0, 0, 0, .08);
-  color: rgba(0, 0, 0, .3);
+  background: rgba(0, 0, 0, 0.08);
+  color: rgba(0, 0, 0, 0.3);
 }
 
-.arrow{
+.arrow {
   height: 10px;
   width: 20px;
 }
 
-.replay{
+.replay {
   height: 20px;
   width: 20px;
 }
 
-.replay-bt{
+.replay-bt {
   margin-left: 20px;
 }
